--- a/bower.json
+++ b/bower.json
@@ -33,5 +33,9 @@
     "jquery": ">=1.7.0",
     "jqueryui": ">=1.9.2"
   },
-  "license": "GPL-3.0-or-later"		
-}
+  "licenses" : [    
+    {
+      "type": "GPL",
+      "url": "http://www.opensource.org/licenses/gpl-license.php"
+    }
+  ],}
